--- a/BASDAI.html
+++ b/BASDAI.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style_common.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
-<body class="scorebody">
-<p class="common_h1">Score BASDAI</p>
+<body>
+<h1>Score BASDAI</h1>
 <p class="italic">Pour chaque item, indiquez une valeur de 0 (absent) à 10 (extrême) concernant votre ressenti.</p>
 <h2>Saisie du score</h2>
 <form name="form" id="form">
