--- a/HAMILTON.html
+++ b/HAMILTON.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style_common.css" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
-<body class="scorebody">
-<p class="common_h1">Échelle de dépression de Hamilton</p>
+<body>
+<h1>Échelle de dépression de Hamilton</h1>
 <p class="italic">Pour chacun des 17 items, choisir la définition qui caractérise le mieux le malade.</p>
 <form name="form" id="form">
     <h2 class="margin-b-2">Humeur dépressive</h2>
