--- a/QIF.html
+++ b/QIF.html
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
-<body class="scorebody">
-<p class="scoretitle_title common_h1">Questionnaire	de	mesure de	l’impact	de	la	fibromyalgie (FIQ	révisé)
+<body>
+<h1>Questionnaire	de	mesure de	l’impact	de	la	fibromyalgie (FIQ	révisé)</h1>
 <h2>1 - Etes-vous	capable de</h2>
 <form name="Form" id="Form" class="form_qif">
     <table>
@@ -753,8 +753,8 @@
 
     <br/>
     <div class="score_result">
-        Score
-        <input name="Resultat" type="text" id="Resultat" style="" disabled readonly="readonly" />
+        <h2 class="left">Score</h2>
+        <input name="Resultat" type="text" id="Resultat" style="width:40px;" disabled  />
         <div id="score_result_confirm"></div>
     </div>
 
@@ -762,7 +762,7 @@
 <br>
 <br>
 <div class="export">
-    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+    <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
 <div class="score_ref">Références</div>
