--- a/SLEDAI.html
+++ b/SLEDAI.html
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
-<body class="scorebody">
-<p class="scoretitle_title common_h1">Systemic Lupus Erythematosus Disease Activity Index (SLEDAI)
+<body>
+<h1>Systemic Lupus Erythematosus Disease Activity Index (SLEDAI)</h1>
 
 <h2>Intérêt</h2>
 <div>
@@ -225,8 +225,8 @@
     <br />
 
     <div class="score_result">
-        Score
-        <input name="Resultat" type="text" id="Resultat" style="" disabled readonly="readonly" />
+        <h2 class="left">Score :</h2>
+        <input name="Resultat" type="text" id="Resultat" style="" disabled  />
         <div id="score_result_confirm"></div>
     </div>
 
@@ -235,7 +235,7 @@
 <br>
 <br>
 <div class="export">
-    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+    <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 
 <div class="score_ref">Références</div>
