--- a/amor.html
+++ b/amor.html
@@ -11,8 +11,8 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
-<body class="scorebody">
-<p class="scoretitle_title common_h1" >Spondylarthrite, Critères d'Amor
+<body>
+<h1>Spondylarthrite, Critères d'Amor</h1>
 <form name="Form" id="Form">
     <table border="0" align="center" cellpadding="2" cellspacing="0">
         <tr>
@@ -133,16 +133,16 @@
         </tr>
     </table>
     <br />
-    <div class="score_result">Score
-        <input name="Resultat" type="text" id="Resultat" style="" disabled readonly="readonly" /><br>
+    <div class="score_result">
+        <h2 class="left">Score :</h2>
+        <input name="Resultat" type="text" id="Resultat" style="" disabled  /><br><br>
         <span id="score_result_confirm" class="red bold fontS17"></span>
     </div>
-
 </form>
 <br>
 <br>
 <div class="export">
-    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+    <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
 <div class="score_inter">Interprétation</div>
