--- a/diagnostic.html
+++ b/diagnostic.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<p class="common_h1">Critères diagnostiques Américano-Européens de 2002</p>
+<h1>Critères diagnostiques Américano-Européens de 2002</h1>
 <p>SYNDROME DE GOUGEROT-SJOGREN: CRITERES DIAGNOSTIQUES<br>
     Critères européens révisés ou internationaux du syndrome de Gougerot-Sjögren<br>
     (Ann Rheum Dis 2002 ;61 :554)</p>
@@ -218,7 +218,7 @@
 <br>
 <br>
 <div class="export">
-    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+    <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
 <span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
