--- a/dreiser.html
+++ b/dreiser.html
@@ -11,15 +11,14 @@
 </head>
 
 <body>
-<p class="common_h1">Indice de Dreiser</p>
+<h1>Indice de Dreiser</h1>
 <div class="content">
     <h2>Intérêt :</h2>
     <p>Il s’agit d’un indice fonctionnel comportant 10 questions concernant des activités ou des types de geste de la vie quotidienne. Il permet d’apprécier l’activité de la maladie arthrosique des articulations des mains. </p>
     <form name="form" id="form">
         <div>
-            <br>
             <div class="flex-column">
-                <strong>Pouvez-vous tourner une clef dans une serrure ?</strong><br>
+                <h2>Pouvez-vous tourner une clef dans une serrure ?</h2>
                 <label class="flex-row">
                     <input name="g1" id="vItem1" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem1">0 - Possible sans difficulté</label>
@@ -36,8 +35,7 @@
                     <input name="g1" id="vItem4" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem4">3 - Impossible</label>
                 </label>
-                <br>
-                <strong> Pouvez-vous couper de la viande avec un couteau ?</strong><br>
+                <h2> Pouvez-vous couper de la viande avec un couteau ?</h2>
                 <label class="flex-row">
                     <input name="g2" id="vItem5" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem5">0 - Possible sans difficulté</label>
@@ -54,8 +52,7 @@
                     <input name="g2" id="vItem8" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem8">3 - Impossible</label>
                 </label>
-                <br>
-                <strong> Pouvez-vous couper du tissu ou du papier avec une paire de ciseaux ?</strong><br>
+                <h2> Pouvez-vous couper du tissu ou du papier avec une paire de ciseaux ?</h2>
                 <label class="flex-row">
                     <input name="g3" id="vItem9" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem9">0 - Possible sans difficulté</label>
@@ -72,8 +69,7 @@
                     <input name="g3" id="vItem12" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem12">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Pouvez-vous soulever une bouteille pleine avec la main ?</strong><br>
+                <h2>Pouvez-vous soulever une bouteille pleine avec la main ?</h2>
                 <label class="flex-row">
                     <input name="g4" id="vItem13" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem13">0 - Possible sans difficulté</label>
@@ -90,8 +86,7 @@
                     <input name="g4" id="vItem16" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem16">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Pouvez-vous fermer le poing complètement ?</strong><br>
+                <h2>Pouvez-vous fermer le poing complètement ?</h2>
                 <label class="flex-row">
                     <input name="g5" id="vItem17" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem17">0 - Possible sans difficulté</label>
@@ -108,8 +103,7 @@
                     <input name="g5" id="vItem20" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem20">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Pouvez-vous faire un nœud ?</strong><br>
+                <h2>Pouvez-vous faire un nœud ?</h2>
                 <label class="flex-row">
                     <input name="g6" id="vItem21" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem21">0 - Possible sans difficulté</label>
@@ -126,9 +120,8 @@
                     <input name="g6" id="vItem24" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem24">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Pour les femmes : Pouvez-vous coudre ?<br>
-                    Pour les hommes : Pouvez-vous visser ? </strong><br>
+                <h2>Pour les femmes : Pouvez-vous coudre ?<br>
+                    Pour les hommes : Pouvez-vous visser ? </h2>
                 <label class="flex-row">
                     <input name="g7" id="vItem25" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem25">0 - Possible sans difficulté</label>
@@ -145,8 +138,7 @@
                     <input name="g7" id="vItem28" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem28">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Pouvez-vous boutonner un vêtement ?</strong><br>
+                <h2>Pouvez-vous boutonner un vêtement ?</h2>
                 <label class="flex-row">
                     <input name="g8" id="vItem29" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem29">0 - Possible sans difficulté</label>
@@ -163,8 +155,7 @@
                     <input name="g8" id="vItem32" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem32">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Pouvez-vous écrire longtemps (sans interruption) ?</strong><br>
+                <h2>Pouvez-vous écrire longtemps (sans interruption) ?</h2>
                 <label class="flex-row">
                     <input name="g9" id="vItem33" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem33">0 - Possible sans difficulté</label>
@@ -181,8 +172,7 @@
                     <input name="g9" id="vItem36" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem36">3 - Impossible</label>
                 </label>
-                <br>
-                <strong>Acceptez-vous sans réticence que l'on vous serre la main ?</strong><br>
+                <h2>Acceptez-vous sans réticence que l'on vous serre la main ?</h2>
                 <label class="flex-row">
                     <input name="g10" id="vItem37" type="radio" value="0" onclick="Calculate()" />
                     <label for="vItem37">0 - Possible sans difficulté</label>
@@ -199,16 +189,12 @@
                     <input name="g10" id="vItem40" type="radio" value="3" onclick="Calculate()" />
                     <label for="vItem40">3 - Impossible</label>
                 </label>
-                <br>
             </div>
-            <div class="flex-row center">
-                <h2 class="total">Total :</h2>
-                <label for="total"></label>
-                <input class="margin0 input" name="total" type="number" id="total" disabled/>
-            </div>
+            <h2 class="total left">Total :</h2><label for="total"></label>
+            <div class="center"><input class="margin0 input center" name="total" type="number" id="total" disabled/></div>
             <br>
             <div class="export">
-                <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+                <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
             </div>
             <br>
             <div class="score_inter">Références</div>
