--- a/lequesne-hanche.html
+++ b/lequesne-hanche.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<p class="common_h1">Indices algo-fonctionnels de Lequesne - HANCHE</p>
+<h1>Indices algo-fonctionnels de Lequesne - HANCHE</h1>
 <div class="content">
     <h2>Intérêts :</h2>
     <ul>
@@ -180,15 +180,15 @@
                     </div>
                 </div>
             </div>
-            <div class="flex-row center">
-                <h2 class="total">Total :</h2>
-                <label for="total"></label>
+            <div class="flex-row">
+                <h2 class="total left">Total :</h2><label for="total"></label>
+            </div>
+            <div class="center">
                 <input class="input margin0" name="total" type="number" id="total" disabled/>
             </div>
-
             <br>
             <div class="export">
-                <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+                <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
             </div>
             <br>
 
