--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<p class="common_h1">Spondylarthrite axiale, Critères ASAS</p>
+<h1>Spondylarthrite axiale, Critères ASAS</h1>
 <p class="common_h2">Chez un patient présentant une <span class="bold">rachialgie ≥ à 3 mois</span> dont l'<span class="bold">âge du diagnostic est &lt; à 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite axiale si :</p>
 
 
@@ -118,7 +118,7 @@
 </label>
 <br>
 <div class="export">
-    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+    <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
 <div class="score_inter">Interprétation</div>
