--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<p class="common_h1">Spondylarthrite périphérique, Critères ASAS</p>
+<h1>Spondylarthrite périphérique, Critères ASAS</h1>
 <p class="common_h2">Chez un patient dont l'<span class="bold">âge du diagnostic est < 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite périphérique si :</p>
 
 <div>
@@ -112,7 +112,7 @@
 </div>
 <br>
 <div class="export">
-    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+    <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <div class="score_inter">Interprétation</div>
 <span class="description">Les critères ASAS (Assessment of SpondyloArthritis international Society) de 2011 permettent de classer une spondylarthrite dans la forme périphérique (sensibilité 77,8%, spécificité 82,2%).</span>
